tests/unhandled-op.m31.ref
Data constructor x is declared.
Constant A is declared.
Constant a is declared.
Constant b is declared.
Constant ( + ) is declared.
The command failed with error:
File "./unhandled-op.m31", line 8, characters 6-12: Runtime error
  unhandled operation failure
Operation info is declared.
The command failed with error:
File "./unhandled-op.m31", line 12, characters 6-9: Runtime error
  unhandled operation info (( !! ) x) (⊢ a + b : A) <function>
